Closed Bug 479180 Opened 15 years ago Closed 15 years ago

[FIX]ChildIterator shouldn't hold strong refs

Categories

(Core :: Layout, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

I checked, and we don't need that anywhere where we use it.
Attached patch FixSplinter Review
Attachment #363043 - Flags: superreview?(roc)
Attachment #363043 - Flags: review?(roc)
Attachment #363043 - Flags: superreview?(roc)
Attachment #363043 - Flags: superreview+
Attachment #363043 - Flags: review?(roc)
Attachment #363043 - Flags: review+
Pushed http://hg.mozilla.org/mozilla-central/rev/79fd9a7490b1
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: