Bug 479180.  Don't hold strong refs in ChildIterator.  r+sr=roc